[project]
name = "ComfyUI_Gemini_Expanded_API"
description = "Node for usage of Gemini API"
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["google-genai", "numpy", "torch"]

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI_Gemini_Expanded_API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "ComfyUI Gemini Expanded API"
Icon = ""
